--- a/.github/workflows/syntax_check_and_test.yml
+++ b/.github/workflows/syntax_check_and_test.yml
@@ -24,9 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest flake8
-          # If you have a requirements.txt or pyproject.toml, add:
-          # pip install -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Check Python syntax
         run: |
