failed action no longer marks PR as drafT

--- a/.github/workflows/syntax_check_and_test.yml
+++ b/.github/workflows/syntax_check_and_test.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install pytest flake8
+          # If you have a requirements.txt or pyproject.toml, add:
+          # pip install -r requirements.txt
 
       - name: Check Python syntax
         run: |
@@ -39,13 +41,3 @@ jobs:
       - name: Run pytest
         run: |
           pytest
-
-      - name: Mark PR as draft if checks fail
-        if: failure()  # This step runs only if previous steps failed
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gh jq
-          PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-          gh pr ready $PR_NUMBER --undo --repo ${{ github.repository }}
