--- a/.github/workflows/syntax_check_and_test.yml
+++ b/.github/workflows/syntax_check_and_test.yml
@@ -2,7 +2,7 @@ name: Python Syntax Check and Tests
 
 on:
   pull_request:
-    types: [opened, ready_for_review]
+    types: [ready_for_review, converted_to_draft]
     branches: [ main ]  # or your default branch
 
 permissions:
