--- a/.github/workflows/syntax_check_and_test.yml
+++ b/.github/workflows/syntax_check_and_test.yml
@@ -2,7 +2,7 @@ name: Python Syntax Check and Tests
 
 on:
   pull_request:
-    types: [opened, ready_for_review]
+    types: [opened, ready_for_review, synchronize]
     branches: [ main ]  # or your default branch
 
 permissions:
@@ -11,6 +11,7 @@ permissions:
 jobs:
   syntax-check-and-test:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
 
     steps:
       - name: Checkout code
@@ -29,6 +30,7 @@ jobs:
           # pip install -r requirements.txt
 
       - name: Check Python syntax
+        #continue-on-error: true
         run: |
           find . -name "*.py" -print0 | xargs -0 python -m py_compile
 
@@ -38,7 +40,7 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
 
-      # TODO: fix the tests first
-      # - name: Run pytest
-      #   run: |
-      #     pytest
+      - name: Run pytest
+        continue-on-error: true
+        run: |
+          pytest -v
