--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://lendacerda:l3ndacerda@localhost:5432/news_hook
+sqlalchemy.url = postgresql://lendacerda:L3ndacerda!@/news_hook?host=/cloudsql/driven-actor-461001-j0:southamerica-east1:sentinel-id-123
 
 
 [post_write_hooks]
