migration at startup

--- a/alembic.ini
+++ b/alembic.ini
@@ -63,8 +63,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://lendacerda:L3ndacerda!@/news_hook?host=/cloudsql/driven-actor-461001-j0:southamerica-east1:sentinel-id-123
-
+#sqlalchemy.url = postgresql://lendacerda:L3ndacerda!@/news_hook?host=/cloudsql/driven-actor-461001-j0:southamerica-east1:sentinel-id-123
+sqlalchemy.url = postgresql://lendacerda:L3ndacerda!@localhost:5432/news_hook
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
