thinking by default and thats it

--- a/alembic.ini
+++ b/alembic.ini
@@ -64,6 +64,7 @@ version_path_separator = os
 # output_encoding = utf-8
 
 sqlalchemy.url = postgresql://lendacerda:L3ndacerda!@/news_hook?host=/cloudsql/driven-actor-461001-j0:southamerica-east1:sentinel-id-123
+#sqlalchemy.url = postgresql://lendacerda:L3ndacerda!@34.95.184.163:5432/news_hook
 #sqlalchemy.url = postgresql://lendacerda:L3ndacerda!@localhost:5432/news_hook
 
 [post_write_hooks]
