fix:connection-string working!!!

--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@/${DB_NAME}?host=${DB_HOST}    #UNIX
+sqlalchemy.url = postgresql+asyncpg://lendacerda:lacerda123@34.151.231.107:5432/news_hook
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
