removed connection string from alembic.ini

--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://news-hook-id:l3nd4c3rd4@35.247.207.49:5432/news_hook
+sqlalchemy.url = 
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
