--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,6 +24,12 @@ steps:
     - '$$CLOUD_SQL_CONNECTION_NAME'
     - '--service-account'
     - '$$SERVICE_ACCOUNT'
+    - '--port'
+    - '8080'
+    - '--command'
+    - 'uvicorn'
+    - '--args'
+    - 'app.main:app,--host,0.0.0.0,--port,8080'
 
 images:
   - 'gcr.io/$PROJECT_ID/news-hook'
