--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,11 @@ cython_debug/
 buildsummary.txt
 env.txt
 application_default_credentials.json
+
+# Terraform files
+*.tfvars
+!terraform.tfvars.example
+.terraform/
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
