--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,35 +1,44 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/news-hook', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/news-hook:$COMMIT_SHA', '.']
   
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/news-hook']
+    args: ['push', 'gcr.io/$PROJECT_ID/news-hook:$COMMIT_SHA']
   
   # Deploy container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
+    entrypoint: gcloud
     args:
-    - 'run'
-    - 'deploy'
-    - 'news-hook'
-    - '--image'
-    - 'gcr.io/$PROJECT_ID/news-hook'
-    - '--region'
-    - 'southamerica-east1'
-    - '--platform'
-    - 'managed'
-    - '--allow-unauthenticated'
-    - '--add-cloudsql-instances'
-    - '$$CLOUD_SQL_CONNECTION_NAME'
-    - '--service-account'
-    - '$$SERVICE_ACCOUNT'
-    - '--port'
-    - '8080'
-    - '--command'
-    - 'uvicorn'
-    - '--args'
-    - 'app.main:app,--host,0.0.0.0,--port,8080'
+      - 'run'
+      - 'deploy'
+      - 'news-hook'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/news-hook:$COMMIT_SHA'
+      - '--region'
+      - 'southamerica-west1'
+      - '--platform'
+      - 'managed'
+      - '--allow-unauthenticated'
+      - '--add-cloudsql-instances'
+      - '$$CLOUD_SQL_CONNECTION_NAME'
+      - '--service-account'
+      - '$$SERVICE_ACCOUNT'
+      - '--port'
+      - '8080'
+      - '--command'
+      - 'uvicorn'
+      - '--args'
+      - 'app.main:app,--host,0.0.0.0,--port,8080'
+
+  # Tag the image as latest
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['tag', 'gcr.io/$PROJECT_ID/news-hook:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/news-hook:latest']
+  
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/news-hook:latest']
 
 images:
-  - 'gcr.io/$PROJECT_ID/news-hook'
+  - 'gcr.io/$PROJECT_ID/news-hook:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/news-hook:latest'
